objects/ASI_CRM_Exchange_Order__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Attention__c</fullName>
        <label>Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Collection_Date__c</fullName>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Collection_Time__c</fullName>
        <label>Collection Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Exchange_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Issue_Note_No__c</fullName>
        <label>FOC Issue Note No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exchange_Return_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Request_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Order_No__c</fullName>
        <label>JDE Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_Of_Line_Item__c</fullName>
        <label>Number Of Line Item</label>
        <summaryForeignKey>ASI_CRM_Exchange_Order_Item__c.ASI_CRM_Exchange_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_Issue_Note_No__c</fullName>
        <label>POS Issue Note No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PO_No__c</fullName>
        <label>PO No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reasons__c</fullName>
        <label>Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SO_No__c</fullName>
        <label>SO No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Return_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Return Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Exchange / Return Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Exchange Orders</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_HK_CRM_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Approved</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Exchange_Order__c.ASI_CRM_HK_Exchange_Order_ReadOnly</value>
        </filters>
        <label>All Approved Exchange Orders</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_HK_CRM_Sales_Administration_Executive</role>
            <role>ASI_HK_CRM_Shared_Service_Centre</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Completed</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_HK_Completed_Date__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Exchange_Order__c.ASI_CRM_HK_Exchange_Order_ReadOnly</value>
        </filters>
        <label>All Completed Exchange Orders</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_HK_CRM_Sales_Administration_Executive</role>
            <role>ASI_HK_CRM_Shared_Service_Centre</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EXO-{00000000}</displayFormat>
        <label>Return Note No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange / Return Orders</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_HK_Exchange_Order</fullName>
        <active>true</active>
        <label>HK Exchange Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_HK_Exchange_Order_ReadOnly</fullName>
        <active>true</active>
        <label>HK Exchange Order ReadOnly</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>